--- a/application/FleetTable.html
+++ b/application/FleetTable.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <title>Employees Table</title>
+    <title>Fleet Table</title>
 </head>
 <body>
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Employee ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Role</th>
+                <th>Bus ID</th>
+                <th>Mileage</th>
+                <th>Active</th>
+                <th>Check Interval</th>
             </tr>
         </thead>
         <tbody>
