--- a/application/FleetTable.html
+++ b/application/FleetTable.html
@@ -6,20 +6,23 @@
     <title>Fleet Table</title>
 </head>
 <body>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Bus ID</th>
-                <th>Mileage</th>
-                <th>Active</th>
-                <th>Check Interval</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Fleet</h2>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Bus ID</th>
+                    <th>Mileage</th>
+                    <th>Active</th>
+                    <th>Check Interval</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
