--- a/GroupProjectUI/dashboard.html
+++ b/GroupProjectUI/dashboard.html
@@ -38,6 +38,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Page1</a>
+                    <a class="nav-link" href="#">Page2</a>
+                    <a class="nav-link" href="#">Page3</a>
+                    <a class="nav-link" href="#">Page4</a>
                 </li>
             </ul>
         </nav>
