added includes to AdminRouteTable.php

--- a/application/dashboard.html
+++ b/application/dashboard.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="../GroupProjectUI/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../GroupProjectUI/css/dashboard.css">
     <title>Dashboard</title>
 </head>
 <body>
