--- a/GroupProjectUI/login.html
+++ b/GroupProjectUI/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/signin.css">
     <title>Login</title>
 </head>
-<body background="pics/loginBackground.jpg">
+<body background="../application/img/loginBackground.jpg">
     <div class="container">
         <form class="form-signin">
             <h2 class="form-signin-heading">Please Sign In</h2>
@@ -14,7 +14,7 @@
             <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+            <button class="btn btn-lg btn-primary btn-block">Sign In</button>
         </form>
     </div>
 </body>
