--- a/application/dashboard.html
+++ b/application/dashboard.html
@@ -21,8 +21,8 @@
                 <li class="nav-item"> <a class="nav-link" href="#"> item2 </a></li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0">Search</button>
             </form>
         </div>
     </nav>
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </nav>
-        <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3">
             <h1>Dashboard</h1>
 
         </main>
